# phonon-gstreamer

./: .gitignore  .kde-ci.yml  .mailmap  .reviewboardrc  CMakeLists.txt  Messages.sh
cmake/: FindGSTREAMER_PLUGIN_AUDIO.cmake  FindGStreamer.cmake  FindGStreamerPlugins.cmake  FindPhonon.cmake  FindUDev.cmake
ds9/: ds9.desktop
gstreamer/: CMakeLists.txt  ConfigureChecks.cmake  abstractrenderer.cpp  abstractrenderer.h  audiodataoutput.cpp  audiodataoutput.h  audioeffect.cpp  audioeffect.h  audiooutput.cpp  audiooutput.h  backend.cpp  backend.h  debug.cpp  debug.h  devicemanager.cpp  devicemanager.h  effect.cpp  effect.h  effectmanager.cpp  effectmanager.h  glrenderer.cpp  glrenderer.h  gsthelper.cpp  gsthelper.h  gstreamer.desktop  gstreamer.desktop.cmake  medianode.cpp  medianode.h  mediaobject.cpp  mediaobject.h  phonon-config-gstreamer.h.cmake  phonon-gstreamer.json.in  phononsrc.cpp  phononsrc.h  pipeline.cpp  pipeline.h  plugininstaller.cpp  plugininstaller.h  qwidgetvideosink.cpp  qwidgetvideosink.h  (+17 more)
gstreamer/icons/: CMakeLists.txt
phonon/experimental/videocapturedevice/videocapturetestapp/: videocapturetestapp.desktop
phonon/tests/fakebackend/: fake.desktop
poqm/ar/: phonon_gstreamer_qt.po
poqm/az/: phonon_gstreamer_qt.po
poqm/bg/: phonon_gstreamer_qt.po
poqm/bs/: phonon_gstreamer_qt.po
poqm/ca/: phonon_gstreamer_qt.po
poqm/ca@valencia/: phonon_gstreamer_qt.po
poqm/cs/: phonon_gstreamer_qt.po
poqm/da/: phonon_gstreamer_qt.po
poqm/de/: phonon_gstreamer_qt.po
poqm/el/: phonon_gstreamer_qt.po
poqm/en_GB/: phonon_gstreamer_qt.po
poqm/eo/: phonon_gstreamer_qt.po
poqm/es/: phonon_gstreamer_qt.po
poqm/et/: phonon_gstreamer_qt.po
poqm/eu/: phonon_gstreamer_qt.po
poqm/fi/: phonon_gstreamer_qt.po
poqm/fr/: phonon_gstreamer_qt.po
poqm/ga/: phonon_gstreamer_qt.po
poqm/gl/: phonon_gstreamer_qt.po
poqm/he/: phonon_gstreamer_qt.po
poqm/hi/: phonon_gstreamer_qt.po
poqm/hr/: phonon_gstreamer_qt.po
poqm/hsb/: phonon_gstreamer_qt.po
poqm/hu/: phonon_gstreamer_qt.po
poqm/ia/: phonon_gstreamer_qt.po
poqm/id/: phonon_gstreamer_qt.po
poqm/is/: phonon_gstreamer_qt.po
poqm/it/: phonon_gstreamer_qt.po
poqm/ja/: phonon_gstreamer_qt.po
poqm/ka/: phonon_gstreamer_qt.po
poqm/kk/: phonon_gstreamer_qt.po
poqm/ko/: phonon_gstreamer_qt.po
poqm/lt/: phonon_gstreamer_qt.po
poqm/lv/: phonon_gstreamer_qt.po
poqm/mai/: phonon_gstreamer_qt.po
poqm/mr/: phonon_gstreamer_qt.po
poqm/nb/: phonon_gstreamer_qt.po
poqm/nds/: phonon_gstreamer_qt.po
poqm/nl/: phonon_gstreamer_qt.po
poqm/nn/: phonon_gstreamer_qt.po
poqm/pa/: phonon_gstreamer_qt.po
poqm/pl/: phonon_gstreamer_qt.po
poqm/pt/: phonon_gstreamer_qt.po
poqm/pt_BR/: phonon_gstreamer_qt.po
poqm/ro/: phonon_gstreamer_qt.po
poqm/ru/: phonon_gstreamer_qt.po
poqm/se/: phonon_gstreamer_qt.po
poqm/sk/: phonon_gstreamer_qt.po
poqm/sl/: phonon_gstreamer_qt.po
poqm/sq/: phonon_gstreamer_qt.po
poqm/sr/: phonon_gstreamer_qt.po
poqm/sr@ijekavian/: phonon_gstreamer_qt.po
poqm/sr@ijekavianlatin/: phonon_gstreamer_qt.po
poqm/sr@latin/: phonon_gstreamer_qt.po
poqm/sv/: phonon_gstreamer_qt.po
poqm/th/: phonon_gstreamer_qt.po
poqm/tr/: phonon_gstreamer_qt.po
poqm/ug/: phonon_gstreamer_qt.po
poqm/uk/: phonon_gstreamer_qt.po
poqm/x-test/: phonon_gstreamer_qt.po
poqm/zh_CN/: phonon_gstreamer_qt.po
poqm/zh_TW/: phonon_gstreamer_qt.po
tools/: dbg-convert-all-dot-to-png.sh
xine/: xine.desktop
